--- a/-- template/index.html
+++ b/-- template/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <h1>Hello World</h1>
     <!-- ooh did this by ctrl+? nice. SCRIPT -->
     <script src="script.js"></script>
     
